--- a/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/index.html.twig
@@ -3,9 +3,15 @@
 {% block content %}
     <div class="jumbotron">
         <h1>Welcome</h1>
+        {% if is_granted('ROLE_USER') %}
+        <h2>{{ app.user.username }}</h2>
+        <p class="lead">Cool, you are part of our app !</p>
+        <p>You can access your user account in the top menu</p>
+        {% else %}
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p><a class="btn btn-lg btn-facebook" href="{{ hwi_oauth_login_url('facebook') }}" role="button">Login with Facebook</a></p>
         <p><a class="btn btn-lg btn-twitter" href="{{ hwi_oauth_login_url('twitter') }}" role="button">Login with Twitter</a></p>
+        {% endif %}
     </div>
 
 {% endblock %}
