layout modifications and connections count endpoint

--- a/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/myAccount.html.twig
+++ b/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/myAccount.html.twig
@@ -26,6 +26,10 @@
                     </button>
                 {% endif %}
             </p>
+            <hr />
+            <h3>Number of connections :
+                {{ render(controller('TomSawyerBaconFinderWebBundle:Default:connectionsCount')) }}
+            </h3>
         </div>
     </div>
 
