--- a/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/layout.html.twig
+++ b/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/layout.html.twig
@@ -30,7 +30,7 @@
                 <li role="presentation" class="active"><a href="{{ path('home') }}">Home</a></li>
                 <li role="presentation"><a href="#">About</a></li>
                 {% if is_granted('ROLE_USER') %}
-                <li role="presentation"><a href="#">My account ({{ app.user.username }})</a></li>
+                <li role="presentation"><a href="{{ path('my_account') }}">My account ({{ app.user.username }})</a></li>
                 <li role="presentation"><a href="{{ path('logout') }}">Logout</a></li>
                 {% endif %}
                 <!--
