connection search in layout

--- a/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/layout.html.twig
+++ b/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/layout.html.twig
@@ -48,5 +48,11 @@
     </footer>
 
 </div> <!-- /container -->
+
+{% javascripts
+    '@typeahead_js' output="assets/scripts.js" %}
+<script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}
+
 </body>
 </html>
