--- a/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/myAccount.html.twig
+++ b/src/TomSawyer/BaconFinder/WebBundle/Resources/views/Default/myAccount.html.twig
@@ -37,7 +37,7 @@
                 Search connection
             </h2>
             <div>
-                <form method="POST">
+                <form method="POST" id="search-connection">
                     <input type="text" placeholder="Enter name here..." id="searchConnection" name="name" class="ui-autocomplete-input"/>
                 </form>
             </div>
